# wgy666

./: .gitignore  A8项目_可靠性质量属性架构设计.docx  IssueScope-软件架构文档-修改版.docx  IssueScope-软件架构文档.docx  README.md  docker-compose.yml  target.md  wgy.md  yjq.md  ykz.md
TechPrototype/: .gitignore  6组技术原型迭代计划.docx  6组技术原型迭代评估报告.docx  6组软件架构文档.docx  UML模型.docx  info.md
UIprototype/: 6组界面原型迭代计划.docx  6组迭代评估报告-界面原型迭代.docx  illustration.md  usecase.md  (+1 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: faq.py  health.py  issues.py  repositories.py  repository_tools.py  users.py
backend/app/assistant/: __init__.py  harness.py  tool_registry.py  tools.py
backend/app/core/: config.py
backend/app/schemas/: assistant.py  issue.py  project_analysis.py  repository.py  repository_tools.py  user.py
backend/app/services/: auto_fix.py  embeddings.py  faq_service.py  file_classifier.py  git_clone.py  github_client.py  issue_classifier.py  knowledge_graph.py  local_embedding.py  memory_service.py  project_analysis.py  repository_query.py  repository_sync.py  repository_url.py
backend/app/storage/: __init__.py  database.py  memory.py  postgres.py  users.py
backend/app/webhooks/: auto_reply.py  handler.py  router.py
backend/tests/: test_project_analysis.py  test_user_config_consumers.py  test_users.py
backend/tests/test_assistant/: test_database_vector_integration.py  test_router.py
backend/tests/test_services/: test_auto_fix.py  test_embeddings.py  test_faq_generate.py  test_faq_memory.py  test_git_clone_security.py  test_issue_classifier.py  test_repository_api.py  test_repository_tools.py
backend/tests/test_webhooks/: __init__.py  test_github_client.py  test_handler.py  test_router.py
(+124 files in other folders)
