[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for GitHub repository sync and issue analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.50.1",
]
